[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cambium-mcp"
version = "0.1.0"
description = "Knowledge-lifecycle MCP: distill agentsync + context-keeper events into memory, recall across projects, promote local -> team -> org"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
authors = [
    { name = "Jonathan Armstrong", email = "jarmstrong158@gmail.com" },
]
keywords = ["mcp", "knowledge", "memory", "claude", "model-context-protocol", "agents", "xylem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = ["mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/jarmstrong158/cambium"
Repository = "https://github.com/jarmstrong158/cambium"
Issues = "https://github.com/jarmstrong158/cambium/issues"

[project.scripts]
cambium-mcp = "cambium_server:main"

[tool.hatch.build.targets.sdist]
include = [
    "cambium_server.py",
    "README.md",
    "DESIGN.md",
    "LICENSE.md",
]

[tool.hatch.build.targets.wheel]
include = [
    "cambium_server.py",
]
